protox-parse/src/snapshots/protox_parse__tests__enum_value_extrema.snap
---
source: protox-parse/src/tests.rs
expression: "parse(r#\"\n        syntax = \"proto3\";\n\n        enum Extreme {\n            ZERO = 0;\n            MIN = -2147483648;\n            MAX = 2147483647;\n        }\n        \"#)"
---
Ok(
    FileDescriptorProto {
        name: Some(
            "test.proto",
        ),
        package: None,
        dependency: [],
        public_dependency: [],
        weak_dependency: [],
        message_type: [],
        enum_type: [
            EnumDescriptorProto {
                name: Some(
                    "Extreme",
                ),
                value: [
                    EnumValueDescriptorProto {
                        name: Some(
                            "ZERO",
                        ),
                        number: Some(
                            0,
                        ),
                        options: None,
                    },
                    EnumValueDescriptorProto {
                        name: Some(
                            "MIN",
                        ),
                        number: Some(
                            -2147483648,
                        ),
                        options: None,
                    },
                    EnumValueDescriptorProto {
                        name: Some(
                            "MAX",
                        ),
                        number: Some(
                            2147483647,
                        ),
                        options: None,
                    },
                ],
                options: None,
                reserved_range: [],
                reserved_name: [],
            },
        ],
        service: [],
        extension: [],
        options: None,
        source_code_info: Some(
            SourceCodeInfo {
                location: [
                    Location {
                        path: [],
                        span: [
                            1,
                            8,
                            7,
                            9,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                        ],
                        span: [
                            3,
                            8,
                            7,
                            9,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            1,
                        ],
                        span: [
                            3,
                            13,
                            20,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            0,
                        ],
                        span: [
                            4,
                            12,
                            21,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            0,
                            1,
                        ],
                        span: [
                            4,
                            12,
                            16,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            0,
                            2,
                        ],
                        span: [
                            4,
                            19,
                            20,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            1,
                        ],
                        span: [
                            5,
                            12,
                            30,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            1,
                            1,
                        ],
                        span: [
                            5,
                            12,
                            15,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            1,
                            2,
                        ],
                        span: [
                            5,
                            18,
                            29,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            2,
                        ],
                        span: [
                            6,
                            12,
                            29,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            2,
                            1,
                        ],
                        span: [
                            6,
                            12,
                            15,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            5,
                            0,
                            2,
                            2,
                            2,
                        ],
                        span: [
                            6,
                            18,
                            28,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            12,
                        ],
                        span: [
                            1,
                            8,
                            26,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                ],
            },
        ),
        syntax: Some(
            "proto3",
        ),
    },
)
